[gd_scene load_steps=10 format=2]

[ext_resource path="res://components/harvester/front/collector_bio/CollectorBio.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/harvester/front/Front.gd" type="Script" id=2]
[ext_resource path="res://components/harvester/module_chooser_popup/ModuleChooserPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/harvester/front/collector_gas/CollectorGas.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/harvester/front/collector_ore/CollectorOre.tscn" type="PackedScene" id=5]
[ext_resource path="res://components/harvester/front/collector_bio/CollectorBioImage.tscn" type="PackedScene" id=6]
[ext_resource path="res://components/harvester/front/collector_gas/CollectorGasImage.tscn" type="PackedScene" id=7]
[ext_resource path="res://components/harvester/front/collector_ore/CollectorOreImage.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 100 )

[node name="Front" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Modules" type="Node2D" parent="."]

[node name="CollectorBio" parent="Modules" instance=ExtResource( 1 )]
position = Vector2( -16, 80 )

[node name="CollectorGas" parent="Modules" instance=ExtResource( 4 )]
visible = false

[node name="CollectorOre" parent="Modules" instance=ExtResource( 5 )]
visible = false

[node name="ModuleChooserPopup" parent="." instance=ExtResource( 3 )]

[node name="CollectorBio" parent="ModuleChooserPopup" groups=["module"] instance=ExtResource( 6 )]
visible = false

[node name="CollectorGas" parent="ModuleChooserPopup" groups=["module"] instance=ExtResource( 7 )]
visible = false

[node name="CollectorOre" parent="ModuleChooserPopup" groups=["module"] instance=ExtResource( 8 )]
visible = false

[connection signal="deselected" from="." to="." method="_on_Front_deselected"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="selected" from="." to="." method="_on_Front_selected"]
[connection signal="module_chosen" from="ModuleChooserPopup" to="." method="_on_ModuleChooserPopup_module_chosen"]
